k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-microservice-web
  namespace: statex-apps
  labels:
    app: auth-microservice-web
    managed-by: k8s-migration
spec:
  type: ClusterIP
  selector:
    app: auth-microservice-web
  ports:
    - protocol: TCP
      port: 3372
      targetPort: 3372
      name: http
